@@ -4,7 +4,7 @@
  *
  * @category        page
  * @package         External Calendar
- * @version         0.9.6
+ * @version         0.9.9
  * @authors         Martin Hecht
  * @copyright       2004-2015, Website Baker Org. e.V.
  * @link            http://forum.websitebaker.org/index.php/topic,28493.0.html
